--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -1,3 +1,10 @@
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .salt-info {
     font-family: 'HK Grotesk';
     font-style: normal;
